re PR c++/16637 (syntax error on valid input code)

PR c++/16637
	* parser.c (cp_parser_simple_type_specifier): Do not record usage
	of globally-qualified names.

	PR c++/16637
	* g++.dg/parse/lookup4.C: New test.

From-SVN: r84962