gcc/testsuite/g++.dg/parse/lookup4.C
@@ -1,0 +1,7 @@
+// PR c++/16637
+
+typedef int I;
+
+struct S {
+  ::I I;
+};
